# ticTacNeat

./: .gitignore  LICENSE  shell.nix  stack.yaml  ticTacNeat.cabal
app/: FightTrainMethod.hs  Main.hs  TicTacToe.hs
src/: TicTacToe.hs
test/: LibSpec.hs
