name:                ticTacNeat
version:             0.1.0.0
synopsis:            Personal project
description:         Please see README.md
homepage:            http://github.com/meditans/ticTacNeat#readme
license:             AllRightsReserved
author:              Carlo Nucera
maintainer:          meditans@gmail.com
copyright:           2016 Carlo Nucera
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable ticTacNeat
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       TicTacToe
                     , FightTrainMethod
  ghc-options:         -Wall
                       -threaded
                       -O2

  -- note: these profiling options are enabled with `cabal configure --enable-executable-profiling`
  ghc-prof-options:    -prof 
                       -auto-all
                       "-with-rtsopts=-N -p -s -h -i0.1"

  build-depends:       base
                     , containers
                     , lens
                     , MonadRandom
                     , neet
                     , random-shuffle
                     , bytestring
                     , cereal
                     , optparse-generic
  default-language:    Haskell2010

test-suite ticTacNeat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/meditans/ticTacNeat
